@@ -3,8 +3,12 @@
 ## Change log for perl distribution DiaColloDB
 
 v0.12.004 PENDING
-	* bug-fix for extend() on list-URLs where all target attributes are missing from DB
+	* fix for extend() on list-URLs where all target attributes are missing from DB
 	* removed some painful global debug code in Profile::Multi::trim()
+	* made default eps=0 more consistent (dcdb-query.perl, DiaColloDB::profileOptions(), Profile::compile_xyz())
+	* added Profile::compile_clean() method as workaround for infinite score values (JSON module inserts e.g. '-inf', but browser can't parse it)
+	* fixed list-client global trimming
+	* added DiaColloDB::Client::dbOptions() hack to pass down logXYZ options through rcfile:// and list:// client-URLs
 
 v0.12.003 Wed, 01 Mar 2017 15:47:02 +0100 moocow
 	* fixed default match-id =2 in ddc groupby
